[package]
name = "litmus-toml-translator"
version = "0.1.0"
edition = "2021"
authors = ["thud <thud@thud.dev>"]
readme = "README.md"

[build-dependencies]
lalrpop = "0.19.0"
isla-lib = { path = "isla/isla-lib" }

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2"
is-terminal = "0.4.10"
log = "0.4"
once_cell = "1.0"
pretty_env_logger = "0.4"
regex = "1.10"
thiserror = "1.0"
toml = "0.5"
lalrpop-util = "0.19.0"

isla-axiomatic = { path = "isla/isla-axiomatic" }
isla-lib = { path = "isla/isla-lib" }
